# PlausiDen-CMS

./: .composition-baseline.json  .gitignore  Cargo.toml  LICENSE  README.md  harvest.toml
.github/workflows/: ci.yml
cms-admin/: Cargo.toml
cms-admin-auth/: Cargo.toml
cms-admin-auth/src/: lib.rs
cms-admin/src/: auth.rs  handlers.rs  main.rs  state.rs  views.rs
cms-cli/: Cargo.toml
cms-cli/src/: main.rs
cms-collab/: Cargo.toml
cms-collab/src/: lib.rs
cms-core/: Cargo.toml
cms-core/src/: audit.rs  audit_log.rs  blog.rs  error.rs  lib.rs  page.rs  storage.rs  store.rs
cms-pre-publish-audit/: Cargo.toml
cms-pre-publish-audit/src/: lib.rs
content/plausiden.com/blog/: cms-launch.md
docs/: CMS_VISION.md
integrations/: avp.toml
