[workspace]
resolver = "2"
members = ["cms-core", "cms-cli", "cms-admin"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/thepictishbeast/PlausiDen-CMS"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
slug = "0.1"
pulldown-cmark = "0.12"

# Admin web UI
axum = { version = "0.8", default-features = false, features = ["http1", "form", "tokio", "tower-log"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time", "net"] }
maud = "0.27"
tower = "0.5"
tower-http = { version = "0.6", features = ["limit", "trace"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
