[workspace]
resolver = "2"
members = [
    "cms-core",
    "cms-cli",
    "cms-admin-auth",
    "cms-pre-publish-audit",
    "cms-collab",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["PlausiDen contributors"]
repository = "https://github.com/thepictishbeast/PlausiDen-CMS"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"
rand = "0.8"
walkdir = "2.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
proptest = "1"
tempfile = "3"
