[package]
name = "cms-admin-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Typed WebAuthn admin auth + cookie-session + per-tenant SQLite path types. Server impl plugs into the trait; this crate is the typed contract."

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
