[package]
name = "plausiden-cms-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PlausiDen-CMS admin web UI: graphical content editing for clients. Axum + Maud, password auth (WebAuthn coming), composes against plausiden-cms-core."

[[bin]]
name = "pdcms-admin"
path = "src/main.rs"

[dependencies]
plausiden-cms-core = { path = "../cms-core" }
axum.workspace = true
tokio.workspace = true
maud = { workspace = true, features = ["axum"] }
tower.workspace = true
tower-http.workspace = true
http.workspace = true
serde.workspace = true
chrono.workspace = true
slug.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

[lints]
workspace = true
