[package]
name = "cms-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PlausiDen-CMS command-line: site init / page CRUD / export."

[[bin]]
name = "cms"
path = "src/main.rs"

[dependencies]
cms-core = { path = "../cms-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = { workspace = true }
