[package]
name = "plausiden-cms-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PlausiDen-CMS — typed content store. Read/write/validate site content stored as TOML+markdown files in git. No runtime DB, no external SaaS."

[lib]
name = "plausiden_cms_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json = "1"
toml.workspace = true
chrono.workspace = true
thiserror.workspace = true
walkdir.workspace = true
slug.workspace = true
pulldown-cmark.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
