[package]
name = "cms-pre-publish-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pre-publish audit phase. Consumes cms_core::Page + emits typed findings the CMS surfaces in the publish dialog. Forge can adopt the same audit via a thin shim."

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[dependencies]
cms-core = { path = "../cms-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
